--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,11 +13,16 @@
  *= require_tree .
  *= require_self
  */
-
+ 
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-body {
-	background-image: url ('instachef/app/spec/images/TOMATO.jpg');
-	margin-top: 60px;
-}
+ body {
+ 	background-image: url('TOMATO.jpg');
+ 	background-size: 100%;
+ 	background-position: 0 0;
+ 	background-repeat: no-repeat;
+ 	background-attachment: fixed;
+ 
+
+ }
