--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,30 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <%= csrf_meta_tags %>
-     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-      <title>InstaChef</title>
+     <%= csrf_meta_tags %>
+     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+      <title>Instachef</title>
+
+        <div class="dropdown hidden-xs">
+<!--     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="">
+      Dropdown
+      <span class="caret"></span>
+    </button> -->
+    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="/posts">Home Feed</a></li>
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="/sign_in">Sign In</a></li>
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="/map">See photos on Map</a></li>
+      <li role="presentation" class="divider"></li>
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="user_uploads">My Photos</a></li>
+    </ul>
+        </div>
 
     <!-- Bootstrap core CSS -->
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
 
-</head>
+  </head>
 
   <body>
 
@@ -24,7 +37,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">InstaChef</a>
+          <a class="navbar-brand" href="/posts">InstaChef</a>
         </div>
         <div class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
@@ -47,4 +60,37 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
   </body>
+
+  <footer>
+    <div class="authors">© Chefs Seligman & Khodr</div>
+    <div class="socialicons">
+      <ul class="spicesocialwidget">
+      <li class="facebook">
+        <a rel="nofollow" href="http://www.facebook.com/" target="_blank" title="facebook">
+          <div class="tooltip"><span>Facebook</span></div>
+        </a>
+      </li>
+      <li class="googleplus">
+        <a rel="nofollow" href="https://plus.google.com/" target="_blank" title="googleplus"></a>
+      </li>
+      <li class="pinterest">
+        <a rel="nofollow" href="http://pinterest.com/" target="_blank" title="pinterest"></a>
+      </li>
+      <li class="twitter">
+        <a rel="nofollow" href="http://twitter.com/" target="_blank" title="twitter"></a>
+      </li>
+      <li class="rss">
+        <a rel="nofollow" href="http://feedburner.com/" target="_blank" title="rss"></a>
+      </li>
+      <li class="flickr">
+        <a rel="nofollow" href="http://www.flickr.com/" target="_blank" title="flickr"></a>
+      </li>
+      <li class="youtube">
+        <a rel="nofollow" href="http://www.youtube.com/" target="_blank" title="youtube"></a>
+      </li>
+    </ul>
+   </div>
+
+
+  </footer>
 </html>
