--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,6 +5,9 @@
 	<%= f.label :tag_list, 'Porn Tags' %>
 	<%= f.text_field :tag_list %>	
 
+	<%= f.label :address %>
+	<%= f.text_field :address %>	
+
 	<%= f.label :picture %>
 	<%= f.file_field :picture %>	
 
