--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
     <main class='container'>
      <%= yield %>
    </main>
-
+   <script src='http://maps.google.com/maps/api/js?sensor=true'></script>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
   </body>
